Stretch Goal: Fixed navigation with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,12 @@ p {
   margin: 0 auto;
 }
 nav {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-color: #F6F6F6;
+  opacity: 0.5;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -189,6 +194,9 @@ nav .links a {
   text-decoration: none;
   font-size: 1.6rem;
   color: #23293B;
+}
+nav .links a:hover {
+  color: #9aa4c3;
 }
 @media (max-width: 800px) {
   nav .links a {
@@ -231,6 +239,12 @@ footer {
   .home .space-images img {
     width: 45%;
   }
+  .home .space-images img:nth-child(1) {
+    display: inherit;
+  }
+  .home .space-images img:nth-child(2) {
+    display: inherit;
+  }
   .home .space-images img:last-child {
     display: none;
   }
@@ -239,7 +253,12 @@ footer {
   .home .space-images img {
     width: 100%;
   }
-  .home .space-images img:nth-child(2),
+  .home .space-images img:nth-child(1) {
+    display: inherit;
+  }
+  .home .space-images img:nth-child(2) {
+    display: none;
+  }
   .home .space-images img:last-child {
     display: none;
   }
